--- a/index.html
+++ b/index.html
@@ -21,7 +21,25 @@
 
         <div class="main">
 
-            <div class="title">Вы давно мечтали побывать в Швейцарии?</div>
+            <div class="title">
+                Вы давно мечтали побывать в Швейцарии?
+            </div>
+
+            <div class="subtitle">
+                Мы поможем осуществить вашу мечту!
+            </div>
+
+            <div class="forma">
+                <form action="" method="">
+                    <input type="text" class="input" placeholder="Введите ваш номер телефона">
+                </form>
+            </div>
+
+            <div class="button">
+                <a href="#" class="btn">
+                    Заказать обратный звонок!
+                </a>
+            </div>
 
         </div>
 
